<resources>
    <string name="contact_sync_label">Set Callertunes for %s</string>
    <string name="edit_cut_rbt">Cut</string>
    <string name="gift_suggestion_popup_cancel">CANCEL</string>
    <string name="gift_suggestion_popup_continue">Continue</string>
    <string name="gift_suggestion_popup_message">Congratulations! We\'ll send you a confirmation message once the tune is set.\nNow you can manage Callertune subscription for your friends and family from your profile Gift Callertunes section. Press Continue to check how</string>
    <string name="best_plan_recommended">Recommended</string>
    <string name="play_for_all_callers_info">This tune will play for all your callers</string>
    <string name="purchase_confirm_title">Subscribe!</string>
    <string name="profile_gift_rbt">Gift Callertunes</string>
    <string name="profile_my_account">My Account</string>
    <string name="delete_child_message">Are you sure you want to delete %s?</string>
    <string name="delete_child_ok">OK</string>
    <string name="delete_child_cancel">CANCEL</string>
    <string name="error_gift_expired">Your gift has expired</string>
    <string name="local_language">English</string>
    <string name="app_name">Vodafone Callertunes</string>
    <string name="search_contact">Search contact</string>
    <string name="contact_done">Done</string>
    <string name="contact_cancel">Cancel</string>
    <string name="custom_cg_title">Great choice! The App will send a confirmation SMS from your device to verify your mobile number</string>
    <string name="custom_cg_click_to_yes">Click \'YES\' to proceed</string>
    <string name="cg_yes">YES</string>
    <string name="cg_no">NO</string>
    <string name="custom_cg_pricing_text">You will be charged Rs. 15 per tune change for 3 months of Callertune service.</string>
    <string name="verifying">VERIFYING</string>
    <string name="cg_sms_back_btn_txt">Please do not press \"back\" button. This may cancel the verification process.</string>
    <string name="verification_failed">VERIFICATION FAILED</string>
    <string name="cg_sms_verification_failed_text">Thank you for your request. We are unable to verify your mobile number. Please reply to the SMS recieved from 5013xxxxx within 60 minutes to activate Callertune. </string>
    <string name="cg_ok">OK</string>
    <string name="SONG_PURCHASE_API_RBT_SUB_DOESNT_EXIST">Please Register before setting the Callertune.</string>
    <string name="SONG_PURCHASE_API_RBT_SONG_NOT_FOUND">We are facing a temporary issue in setting this tune as your Vodafone Callertune. Please try after some time.</string>
    <string name="SONG_PURCHASE_API_RBT_SONG_EXPIRED">We are facing a temporary issue in setting this tune as your Vodafone Callertune. Please try after some time.</string>
    <string name="SONG_PURCHASE_API_RBT_CATEGORY_DOESNT_EXIST">We are facing a temporary issue in setting this tune as your Vodafone Callertune. Please try after some time.</string>
    <string name="SONG_PURCHASE_API_RBT_CONTENT_EXPIRED">We are facing a temporary issue in setting this tune as your Vodafone Callertune. Please try after some time.</string>
    <string name="SONG_PURCHASE_API_RBT_SUB_ALREADY_OWNS_CONTENT">This tune is already set as your Vodafone Callertune.</string>
    <string name="SONG_PURCHASE_API_RBT_OPERATION_NOT_ALLOWED">This tune cannot be set as your Vodafone Callertune. Please contact Customer Care.</string>
    <string name="PURCHASE_COMBO_API_CONTENT_BLOCKED_LITE_USER">You are not allowed to activate this Callertune as this is a premium Callertune.</string>
    <string name="PURCHASE_COMBO_API_CONTENT_BLOCKED_ADRBT">Dear Subscriber, you are currently active on the Advertisement Callertune pack. To deactivate CALL or SMS STOP to 155223 Toll free and then try activating through Vodafone Callertunes App.</string>
    <string name="PURCHASE_COMBO_API_CONTENT_BLOCKED_PROFILE">Dear Subscriber, you are currently active on the Profile tunes pack. To deactivate CALL or SMS STOP to 155223 Toll free and then try activating through Vodafone Callertunes App.</string>
    <string name="PURCHASE_COMBO_API_CONTENT_BLOCKED_CORP_USER">Corporate Callertune is active on your Vodafone number, hence Callertune cannot be changed. To change, please contact your Company Admin.</string>
    <string name="PURCHASE_COMBO_API_LOCKED_USER">You cannot change your tunes since your Callertunes service is locked. To Unlock, SMS CT UNLOCK to 56789 at Rs. 5/SMS</string>
    <string name="PURCHASE_COMBO_CORPORATE_CONTEN_NOT_ALLOWED">Corporate Caller Tune is active on your number, hence song selection cannot be done. For further assistance please contact your Relationship Manager.</string>
    <string name="PRICING_API_RBT_INVALID_SUBSCRIBER_STATE">Your deactivation request for Callertunes service is currently pending. Please try again later.</string>
    <string name="DELETE_SONG_API_RBT_INVALID_PARAMETER">There is some Technical Error! Kindly try again after some time.</string>
    <string name="DELETE_SONG_API_RBT_DEACTIVATE_SELECTION_ERROR">We are facing a temporary issue while removing a Callertune. Please try after sometime.</string>
    <string name="error_remove_last_item">Dear user, you have one tune selection left. Removal is not allowed for this tune.</string>
    <string name="ADD_PLAYRULE_API_RBT_SONG_EXPIRED">We are facing a temporary issue in setting this tune as your Vodafone Callertune. Please try after some time.</string>
    <string name="ADD_PLAYRULE_API_RBT_CATEGORY_DOESNT_EXIST">We are facing a temporary issue in setting this tune as your Vodafone Callertune. Please try after some time.</string>
    <string name="ADD_PLAYRULE_API_RBT_CONTENT_EXPIRED">We are facing a temporary issue in setting this tune as your Vodafone Callertune. Please try after some time.</string>
    <string name="ADD_PLAYRULE_API_RBT_SUB_ALREADY_OWNS_CONTENT">This tune is already set as your Vodafone Callertune.</string>
    <string name="ADD_PLAYRULE_API_RBT_SUB_DOESNT_EXIST">Please Register before setting the Callertune.</string>
    <string name="ADD_PLAYRULE_API_RBT_SUB_DOESNT_OWN_CONTENT">There is some Technical Error! Kindly try again after some time.</string>
    <string name="download_limit_exceed">You cannot purchase this tune since you have reached the maximum download limit for this month.</string>
    <string name="download_limit_exceed_with_count_left">You cannot purchase this tune since you have only %1$s purchases remaining for the month.</string>
    <string name="GET_PLAYRULE_API_RBT_SUB_DOESNT_EXIST">Hey ! Your callers are listening to the same old boring tring tring. Discover and set a favourite one from 1.4 million callertunes.</string>
    <string name="GET_PLAYRULE_API_RBT_INVALID_PARAMETER">We are facing a temporary issue. Please try after sometime.</string>
    <string name="GET_PLAYRULE_API_RBT_PLAY_RULE_NOT_EXIST">Hey ! Your callers are listening to the same old boring tring tring. Discover and set a favourite one from 1.4 million callertunes.</string>
    <string name="GET_PLAYRULE_API_RBT_UNKNOWN_ERROR">We are facing a temporary issue. Please try after sometime.</string>
    <string name="error_handler_mobile_network">Please check your internet connection and try again (WIFI or Mobile network).</string>
    <string name="error_handler_invalid_otp">Invalid OTP input. Please enter a valid OTP.</string>
    <string name="reached_maximum_number_of_resend_otp">Please try after 01:00 minute.</string>
    <string name="error_handler_general_network_error">Network error. Please try again.</string>
    <string name="preview_error">Cannot play song preview due to some Technical Error! Kindly try again after some time.</string>
    <string name="feedback_error">Sorry, we are not able to take your feedback currently. Please try after sometime.</string>
    <string name="feedback_success">Thank you for your feedback. We will get back to you.</string>
    <string name="err_webview">Internal server error occurred. Please try after sometime</string>
    <string name="error_handler_general_error">@string/app_error_general_desc</string>
    <string name="error_message_no_sim_present">Sim card not found! Please check and restart application.</string>
    <string name="app_error_general_desc">Some error occurred. Please try again after some time. If problem persists, contact our Customer Care Service.</string>
    <string name="app_error_no_data_title">No Data Error</string>
    <string name="error_handler_content_not_purchasable">Due to some technical error, this cannot be set as your Callertune.</string>
    <string name="RBT_SUB_DOESNT_EXIST">Vodafone Callertune cannot be set for this number. Please try after some time.</string>
    <string name="RBT_INTERNAL_SERVER_ERROR">We are facing a temporary issue. Please try after some time.</string>
    <string name="RBT_SONG_NOT_FOUND">We are facing a temporary issue in setting this tune as your Vodafone Callertune. Please try after some time.</string>
    <string name="RBT_CATEGORY_DOESNT_EXIST">We are facing a temporary issue in setting this tune as your Vodafone Callertune. Please try after some time.</string>
    <string name="RBT_SONG_EXPIRED">We are facing a temporary issue in setting this tune as your Vodafone Callertune. Please try after some time.</string>
    <string name="RBT_CONTENT_EXPIRED">We are facing a temporary issue in setting this tune as your Vodafone Callertune. Please try after some time.</string>
    <string name="RBT_SUB_ALREADY_OWNS_CONTENT">This tune is already set as your Vodafone Callertune for your selected Callers.</string>
    <string name="RBT_OPERATION_NOT_ALLOWED">This tune cannot be set as your Vodafone Callertune for your number. Please contact Customer Care.</string>
    <string name="RBT_INVALID_PARAMETER">We are facing a temporary issue. Please try after some time.</string>
    <string name="RBT_DEACTIVATE_SELECTION_ERROR">We are facing a temporary issue. Please try after some time.</string>
    <string name="go_to_store">Go to Music Store</string>
    <string name="set_small">Set</string>
    <string name="store">Store</string>
    <string name="home">Home</string>
    <string name="activity">Activity</string>
    <string name="profile">Profile</string>
    <string name="loading">Loading</string>
    <string name="available_plans_title">Available Plans</string>
    <string name="available_plans_desc">49 ipsum dolor sit amet, consectetur adipiscing. adipiscing.</string>
    <string name="anonymous">Anonymous</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="logout">Log Out</string>
    <string name="label_select_avatar">Select Avatar</string>
    <string name="label_switch_notifications">Notifications</string>
    <string name="label_switch_digital_star">End of call Notification</string>
    <string name="label_change_plan">Change Your Plan</string>
    <string name="label_change_number">Change Number</string>
    <string name="label_change_content_language">Content Language</string>
    <string name="label_help_faq"><![CDATA[Help & FAQ]]></string>
    <string name="label_share_app">Share App</string>
    <string name="label_app_tour">App Tour</string>
    <string name="label_terms_conditions">Terms &amp; Conditions</string>
    <string name="label_about_app">About Callertunes</string>
    <string name="label_permissions">Permissions</string>
    <string name="label_feedback">Feedback</string>
    <string name="label_switch_contact_sync">Contact Sync</string>
    <string name="label_switch_personalized_shuffle">Personalized Shuffle</string>
    <string name="empty_activity_info1">No Activity Yet.</string>
    <string name="empty_activity_info2">Callertunes make conversation exciting.\nJust try setting a callertune of your\nchoice from a catalogue of 2 million\ntunes and free Profile tune</string>
    <string name="label_change_app_language">App Language</string>
</resources>