<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_home"
        android:enabled="true"
        android:icon="@drawable/ic_home_black_24dp"
        android:orderInCategory="1"
        android:title="@string/home"
        app:showAsAction="withText|ifRoom" />
    <item
        android:id="@+id/action_store"
        android:enabled="true"
        android:icon="@drawable/ic_store_black_24dp"
        android:orderInCategory="2"
        android:title="@string/store"
        app:showAsAction="withText|ifRoom" />
    <item
        android:id="@+id/action_activity"
        android:enabled="true"
        android:icon="@drawable/ic_activity_black_24dp"
        android:orderInCategory="3"
        android:title="@string/activity"
        app:showAsAction="withText|ifRoom" />
    <item
        android:id="@+id/action_profile"
        android:enabled="true"
        android:icon="@drawable/ic_profile_black_24dp"
        android:orderInCategory="4"
        android:title="@string/profile"
        app:showAsAction="withText|ifRoom" />
</menu>