<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.onmobile.rbt.baseline.util.customview.MediumTextView
            android:id="@+id/tv_loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/loading"
            android:theme="@style/App.TextView.Error"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingTop="@dimen/activity_padding_half"
            android:paddingBottom="@dimen/activity_padding"
            android:visibility="visible">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingStart="@dimen/activity_padding"
                android:paddingEnd="@dimen/activity_padding"
                android:visibility="gone">

                <androidx.cardview.widget.CardView
                    android:id="@+id/card_profile_picture"
                    android:layout_width="@dimen/profile_pic_size"
                    android:layout_height="@dimen/profile_pic_size"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?attr/selectableItemBackground"
                    android:innerRadius="0dp"
                    android:shape="ring"
                    android:thicknessRatio="1.9"
                    app:cardBackgroundColor="@color/border_profile_picture"
                    app:cardCornerRadius="@dimen/profile_pic_radius"
                    app:cardPreventCornerOverlap="true"
                    app:cardUseCompatPadding="true"
                    app:contentPadding="@dimen/profile_pic_border">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/iv_profile_picture"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:adjustViewBounds="true"
                        android:scaleType="fitXY" />

                    <androidx.cardview.widget.CardView
                        android:id="@+id/card_avatar_selector"
                        android:layout_width="@dimen/profile_avatar_selector_size"
                        android:layout_height="@dimen/profile_avatar_selector_size"
                        android:layout_gravity="center"
                        android:innerRadius="0dp"
                        android:shape="ring"
                        android:thicknessRatio="1.9"
                        app:cardBackgroundColor="@color/colorAccent"
                        app:cardCornerRadius="@dimen/profile_avatar_selector_radius"
                        app:cardPreventCornerOverlap="true"
                        app:cardUseCompatPadding="true">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:orientation="vertical">

                            <androidx.appcompat.widget.AppCompatImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:adjustViewBounds="true"
                                android:scaleType="fitXY"
                                app:srcCompat="@drawable/ic_photo_camera_white_24dp" />

                            <com.onmobile.rbt.baseline.util.customview.LightTextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/label_select_avatar"
                                android:textColor="@color/white"
                                android:textSize="10sp"
                                android:theme="@style/App.TextView.SingleLine" />
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                </androidx.cardview.widget.CardView>

                <com.onmobile.rbt.baseline.util.customview.MediumTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="-12dp"
                    android:maxLines="2"
                    android:text="@string/anonymous"
                    android:textSize="27sp"
                    android:theme="@style/App.TextView.Multiline" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:orientation="vertical">

                <com.onmobile.rbt.baseline.util.customview.RegularTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/activity_margin"
                    android:layout_marginBottom="8dp"
                    android:text="@string/settings"
                    android:textColor="@color/txt_secondary"
                    android:theme="@style/App.TextView.SingleLine" />

                <com.onmobile.rbt.baseline.widget.LabeledView
                    android:id="@+id/labeled_my_account"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:bottomDivider="true"
                    app:label="@string/profile_my_account"
                    app:valueTextColor="@color/colorAccent" />

                <com.onmobile.rbt.baseline.widget.LabeledView
                    android:id="@+id/labeled_change_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:bottomDivider="true"
                    app:label="@string/label_change_number"
                    app:valueTextColor="@color/colorAccent" />

                <com.onmobile.rbt.baseline.widget.LabeledView
                    android:id="@+id/labeled_gift_rbt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    app:bottomDivider="true"
                    app:label="@string/profile_gift_rbt"
                    app:valueTextColor="@color/colorAccent">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical|end"
                        android:orientation="horizontal">

                        <androidx.appcompat.widget.AppCompatImageView
                            android:layout_width="29dp"
                            android:layout_height="29dp"
                            android:layout_gravity="center_vertical"
                            android:layout_marginEnd="10dp"
                            app:srcCompat="@drawable/ic_gift_29" />

                        <com.onmobile.rbt.baseline.widget.chip.Chip
                            android:id="@+id/chip_add_more_contact_root_set_action"
                            android:layout_width="51dp"
                            android:layout_height="31dp"
                            android:layout_marginEnd="16dp"
                            android:gravity="center"
                            android:paddingStart="12dp"
                            android:paddingTop="8dp"
                            android:paddingEnd="8dp"
                            android:paddingBottom="8dp"
                            android:visibility="visible">

                            <RelativeLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerInParent="true">

                                <androidx.appcompat.widget.AppCompatImageView
                                    android:id="@+id/iv_add_more_contact_root_set_action"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    app:srcCompat="@drawable/ic_add_contact_accent_16dp" />

                                <com.onmobile.rbt.baseline.util.customview.RegularTextView
                                    android:id="@+id/tv_add_more_contact_root_set_action"
                                    style="@style/App.TextView.SingleLine"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_toEndOf="@+id/iv_add_more_contact_root_set_action"
                                    android:paddingStart="2dp"
                                    android:paddingEnd="0dp"
                                    android:textColor="@color/colorAccent" />
                            </RelativeLayout>
                        </com.onmobile.rbt.baseline.widget.chip.Chip>
                    </LinearLayout>
                </com.onmobile.rbt.baseline.widget.LabeledView>

                <com.onmobile.rbt.baseline.widget.LabeledView
                    android:id="@+id/labeled_switch_notification"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:bottomDivider="true"
                    app:label="@string/label_switch_notifications"
                    app:switchStatus="true"
                    app:switcher="true" />

                <com.onmobile.rbt.baseline.widget.LabeledView
                    android:id="@+id/labeled_switch_contact_sync"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:bottomDivider="true"
                    app:label="@string/label_switch_contact_sync"
                    app:switcher="true" />

                <com.onmobile.rbt.baseline.widget.LabeledView
                    android:id="@+id/labeled_digital_star"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:bottomDivider="true"
                    app:label="@string/label_switch_digital_star"
                    app:switcher="true" />

                <com.onmobile.rbt.baseline.widget.LabeledView
                    android:id="@+id/labeled_personalized_shuffle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    app:bottomDivider="true"
                    app:label="@string/label_switch_personalized_shuffle"
                    app:switcher="true" />

                <com.onmobile.rbt.baseline.widget.LabeledView
                    android:id="@+id/labeled_change_plan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    app:bottomDivider="true"
                    app:label="@string/label_change_plan"
                    app:valueTextColor="@color/colorAccent" />

                <com.onmobile.rbt.baseline.widget.LabeledView
                    android:id="@+id/labeled_change_language"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:bottomDivider="true"
                    app:label="@string/label_change_content_language"
                    app:valueTextColor="@color/colorAccent" />

                <com.onmobile.rbt.baseline.widget.LabeledView
                    android:id="@+id/labeled_change_app_language"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:bottomDivider="true"
                    app:label="@string/label_change_app_language"
                    android:visibility="gone"
                    app:valueTextColor="@color/colorAccent" />

                <!-- <com.onmobile.rbt.baseline.widget.LabeledView
                     android:id="@+id/labeled_switch_theme"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     app:bottomDivider="true"
                     app:label="@string/label_switch_theme"
                     app:switcher="true" />-->

                <com.onmobile.rbt.baseline.widget.LabeledView
                    android:id="@+id/labeled_app_tour"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:bottomDivider="true"
                    app:label="@string/label_app_tour"
                    app:valueTextColor="@color/colorAccent" />

                <com.onmobile.rbt.baseline.widget.LabeledView
                    android:id="@+id/labeled_help_faq"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:bottomDivider="true"
                    app:label="@string/label_help_faq"
                    app:valueTextColor="@color/colorAccent" />

                <com.onmobile.rbt.baseline.widget.LabeledView
                    android:id="@+id/labeled_share_app"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:bottomDivider="true"
                    app:label="@string/label_share_app"
                    app:valueTextColor="@color/colorAccent" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:orientation="vertical">

                <com.onmobile.rbt.baseline.util.customview.RegularTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/activity_margin"
                    android:layout_marginBottom="8dp"
                    android:text="@string/about"
                    android:textColor="@color/txt_secondary"
                    android:theme="@style/App.TextView.SingleLine" />

                <com.onmobile.rbt.baseline.widget.LabeledView
                    android:id="@+id/labeled_about_app"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:bottomDivider="true"
                    app:label="@string/label_about_app"
                    app:value="@string/app_version"
                    app:valueTextColor="@color/colorAccent" />

                <com.onmobile.rbt.baseline.widget.LabeledView
                    android:id="@+id/labeled_permissions"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:bottomDivider="true"
                    app:label="@string/label_permissions" />

                <com.onmobile.rbt.baseline.widget.LabeledView
                    android:id="@+id/labeled_terms_condition"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:bottomDivider="true"
                    app:label="@string/label_terms_conditions" />

                <com.onmobile.rbt.baseline.widget.LabeledView
                    android:id="@+id/labeled_feedback"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:bottomDivider="true"
                    app:label="@string/label_feedback" />
            </LinearLayout>

            <com.onmobile.rbt.baseline.util.customview.RegularTextView
                android:id="@+id/tv_logout"
                style="@style/App.TextView.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/activity_margin"
                android:layout_marginTop="24dp"
                android:minWidth="112dp"
                android:minHeight="38dp"
                android:text="@string/logout"
                android:textSize="14sp"
                android:visibility="gone" />

        </LinearLayout>
    </RelativeLayout>
</androidx.core.widget.NestedScrollView>